--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Sadman Sakib <ssakib4040@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev" : "webpack --watch",
+    "dev": "webpack --watch",
     "build": "webpack"
   },
   "dependencies": {
@@ -21,6 +21,10 @@
     "@babel/preset-typescript": "^7.22.5",
     "@types/react": "^18.2.17",
     "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "sass": "^1.64.1",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
