--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@types/classnames": "^2.3.1",
     "@types/react": "^18.2.17",
     "babel-loader": "^9.1.3",
+    "classnames": "^2.3.2",
     "css-loader": "^6.8.1",
     "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
